use symbol link to reference the template files and MakeNewSection.bat to make new section fold

--- a/template/notation.tex
+++ b/template/notation.tex
@@ -11,7 +11,6 @@
 \newcommand{\bbf}{\mathbb{F}}
 
 
-\newcommand{\kk}{\mathbf{k}}
 \newcommand{\ten}{\otimes}
 \newcommand{\Var}{\mathbf{Var}}
 
@@ -28,10 +27,22 @@
 \newcommand{\Frac}{\mathrm{Frac}}
 \newcommand{\Der}{\operatorname{Der}}
 \newcommand{\Spec}{\operatorname{Spec}}
+\newcommand{\mSpec}{\operatorname{mSpec}}
 \newcommand{\depth}{\operatorname{depth}}
 \newcommand{\idealht}{\operatorname{ht}}
+\newcommand{\codim}{\operatorname{codim}}
+\newcommand{\Supp}{\operatorname{Supp}}
+\newcommand{\trdeg}{\operatorname{trdeg}}
+\newcommand{\Ass}{\operatorname{Ass}}
+\newcommand{\Ann}{\operatorname{Ann}}
 
 
+\newcommand{\kk}{\mathsf{k}}
+\newcommand{\kkk}{\mathbf{k}}
+\newcommand{\KK}{\mathsf{K}}
+\newcommand{\KKK}{\mathbf{K}}
+\newcommand{\rkk}{\kappa} % residue field
+\newcommand{\fkk}{\mathscr{K}} % fraction field
 \renewcommand{\d}{\mathrm{d}}
 \renewcommand{\i}{\mathrm{i}}
 \renewcommand{\P}{\partial}
