normality and CM scheme, continue

--- a/template/notation.tex
+++ b/template/notation.tex
@@ -1,5 +1,5 @@
 %一些常用的宏定义
-\newcommand{\bbc}{\mathbb{C}}
+\newcommand{\bbc}{{\mathbb{C}}}
 \newcommand{\bbr}{\mathbb{R}}
 \newcommand{\bbq}{\mathbb{Q}}
 \newcommand{\bbz}{\mathbb{Z}}
@@ -19,14 +19,15 @@
 \newcommand{\cali}{\mathcal{I}}
 
 
-\newcommand{\fraka}{\mathfrak{a}}
-\newcommand{\frakm}{\mathfrak{m}}
-\newcommand{\frakp}{\mathfrak{p}}
+\newcommand{\fraka}{{\mathfrak{a}}}
+\newcommand{\frakm}{{\mathfrak{m}}}
+\newcommand{\frakp}{{\mathfrak{p}}}
 
 
 \newcommand{\Frac}{\mathrm{Frac}}
 \newcommand{\Der}{\operatorname{Der}}
 \newcommand{\Spec}{\operatorname{Spec}}
+\newcommand{\spec}{\operatorname{Spec}}
 \newcommand{\mSpec}{\operatorname{mSpec}}
 \newcommand{\depth}{\operatorname{depth}}
 \newcommand{\idealht}{\operatorname{ht}}
