--- a/template/noteformyself.cls
+++ b/template/noteformyself.cls
@@ -414,5 +414,5 @@
 %--------------------------------------------------------------------------
 % 自定义实用命令
 %--------------------------------------------------------------------------
-\newcommand{\Yang}{\textcolor{red}{Yang: }} % 批注命令
+\newcommand{\Yang}[1]{\textcolor{red}{Yang: #1}} % 批注命令
 \input{notation.tex}            % 加载符号定义文件
