finish associated prime ideals

--- a/template/notation.tex
+++ b/template/notation.tex
@@ -1,30 +1,49 @@
 %一些常用的宏定义
+\newcommand{\bba}{{\mathbb{A}}}
 \newcommand{\bbc}{{\mathbb{C}}}
-\newcommand{\bbr}{\mathbb{R}}
-\newcommand{\bbq}{\mathbb{Q}}
-\newcommand{\bbz}{\mathbb{Z}}
-\newcommand{\bbn}{\mathbb{N}}
-\newcommand{\bbd}{\mathbb{D}}
-\newcommand{\bbh}{\mathbb{H}}
-\newcommand{\bba}{\mathbb{A}}
-\newcommand{\bbp}{\mathbb{P}}
-\newcommand{\bbf}{\mathbb{F}}
+\newcommand{\bbd}{{\mathbb{D}}}
+\newcommand{\bbf}{{\mathbb{F}}}
+\newcommand{\bbh}{{\mathbb{H}}}
+\newcommand{\bbn}{{\mathbb{N}}}
+\newcommand{\bbp}{{\mathbb{P}}}
+\newcommand{\bbq}{{\mathbb{Q}}}
+\newcommand{\bbr}{{\mathbb{R}}}
+\newcommand{\bbz}{{\mathbb{Z}}}
 
 
-\newcommand{\ten}{\otimes}
-\newcommand{\Var}{\mathbf{Var}}
-
-
-\newcommand{\calo}{\mathcal{O}}
-\newcommand{\cali}{\mathcal{I}}
+\newcommand{\cali}{{\mathcal{I}}}
+\newcommand{\caln}{{\mathcal{N}}}
+\newcommand{\calo}{{\mathcal{O}}}
 
 
 \newcommand{\fraka}{{\mathfrak{a}}}
 \newcommand{\frakm}{{\mathfrak{m}}}
 \newcommand{\frakp}{{\mathfrak{p}}}
+\newcommand{\frakq}{{\mathfrak{q}}}
 
 
-\newcommand{\Frac}{\mathrm{Frac}}
+\newcommand{\kk}{{\mathsf{k}}}
+\newcommand{\kkk}{{\mathbf{k}}}
+\newcommand{\KK}{{\mathsf{K}}}
+\newcommand{\KKK}{{\mathbf{K}}}
+\newcommand{\rkk}{{\kappa}} % residue field
+\newcommand{\fkk}{{\mathscr{K}}} % fraction field
+
+\renewcommand{\d}{{\mathrm{d}}}
+\renewcommand{\i}{{\mathrm{i}}}
+\renewcommand{\P}{\partial}
+
+
+\newcommand{\Var}{\mathbf{Var}}
+
+
+\newcommand{\ten}{\otimes}
+\newcommand{\ratmap}{\dasharrow}
+\newcommand{\injmap}{\hookrightarrow}
+\newcommand{\surjmap}{\twoheadrightarrow}
+
+
+\newcommand{\Frac}{\operatorname{Frac}}
 \newcommand{\Der}{\operatorname{Der}}
 \newcommand{\Spec}{\operatorname{Spec}}
 \newcommand{\spec}{\operatorname{Spec}}
@@ -38,26 +57,8 @@
 \newcommand{\Ann}{\operatorname{Ann}}
 
 
-\newcommand{\kk}{\mathsf{k}}
-\newcommand{\kkk}{\mathbf{k}}
-\newcommand{\KK}{\mathsf{K}}
-\newcommand{\KKK}{\mathbf{K}}
-\newcommand{\rkk}{\kappa} % residue field
-\newcommand{\fkk}{\mathscr{K}} % fraction field
-\renewcommand{\d}{\mathrm{d}}
-\renewcommand{\i}{\mathrm{i}}
-\renewcommand{\P}{\partial}
+\newcommand{\mat}[4]{\left[ \begin{array}{cc}#1 &#2 \\ #3 &#4\end{array}\right]}
 
-
-% \renewcommand{\ker}{\mathrm{Ker}\ }
-% \newcommand{\ord}{\mathrm{ord}}
-% \renewcommand{\hom}{\mathrm{Hom}}
-% \renewcommand{\gcd}{\mathrm{g.c.d.}}
-% \newcommand{\laplace}{\Delta}
-% \newcommand{\lcm}{\mathrm{l.c.m.}}
-\newcommand{\mat}[4]{\left( \begin{array}{cc}#1 &#2 \\ #3 &#4\end{array}\right)}
-% \renewcommand{\vec}[1]{\boldsymbol{#1}}
-% \renewcommand{\proofname}{\indent\it Proof}
 
 
 
