--- a/template/ref.bib
+++ b/template/ref.bib
@@ -146,7 +146,7 @@
   year           = {2002/2003}
 }
 
-@book{刘青2002algebraic,
+@book{Liu02,
   title={Algebraic geometry and arithmetic curves},
   author={刘青},
   volume={6},
@@ -174,4 +174,12 @@
   volume={83},
   year={2012},
   publisher={Springer Science \& Business Media}
+}
+
+@book{Mat70,
+  title={Commutative algebra},
+  author={Matsumura, Hideyuki},
+  volume={120},
+  year={1970},
+  publisher={WA Benjamin New York}
 }
