almostly finish the Serre's criterion for normality

--- a/template/notation.tex
+++ b/template/notation.tex
@@ -11,18 +11,24 @@
 \newcommand{\bbz}{{\mathbb{Z}}}
 
 
+\newcommand{\calf}{{\mathcal{F}}}
 \newcommand{\cali}{{\mathcal{I}}}
 \newcommand{\caln}{{\mathcal{N}}}
 \newcommand{\calo}{{\mathcal{O}}}
 
 
 \newcommand{\fraka}{{\mathfrak{a}}}
+\newcommand{\frakM}{{\mathfrak{M}}}
 \newcommand{\frakm}{{\mathfrak{m}}}
+\newcommand{\frakN}{{\mathfrak{N}}}
+\newcommand{\frakP}{{\mathfrak{P}}}
 \newcommand{\frakp}{{\mathfrak{p}}}
+\newcommand{\frakQ}{{\mathfrak{Q}}}
 \newcommand{\frakq}{{\mathfrak{q}}}
 
 
 \newcommand{\kk}{{\mathsf{k}}}
+\newcommand{\exk}{{\mathsf{l}}}
 \newcommand{\kkk}{{\mathbf{k}}}
 \newcommand{\KK}{{\mathsf{K}}}
 \newcommand{\KKK}{{\mathbf{K}}}
@@ -42,6 +48,7 @@
 \newcommand{\injmap}{\hookrightarrow}
 \newcommand{\surjmap}{\twoheadrightarrow}
 
+\newcommand{\id}{{\operatorname{id}}}
 
 \newcommand{\Frac}{\operatorname{Frac}}
 \newcommand{\Der}{\operatorname{Der}}
