--- a/notebook_ag.tex
+++ b/notebook_ag.tex
@@ -6,11 +6,11 @@
 \author{Tianle Yang}
 \date{\today}
 \authorinfo{\href{mailto:loveandjustice@88.com}{loveandjustice@88.com}}
-\setCJKfamilyfont{stxingkai}{STXingkai} % 定义华文行楷
-\coversentence{\CJKfamily{stxingkai}阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴！}
+\setCJKfamilyfont{lxgwwenkai}{LXGW WenKai} % 定义霞鹜文楷，若未安装，请去掉相关代码编译或使用其他字体
+\coversentence{\CJKfamily{lxgwwenkai}阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴！}
 \coverimage{template/placeholder.jpg} % 封面图片
 % \coverlinecolor{red}
-% \covertitlefont{Brush Script MT}
+\covertitlefont{Allura} % 封面标题字体, 若未安装，可注释掉此行编译或使用其他字体
 % \covertextcolor{green}
 
 
