finish the unmixedness theorem

--- a/template/notation.tex
+++ b/template/notation.tex
@@ -62,6 +62,9 @@
 \newcommand{\trdeg}{\operatorname{trdeg}}
 \newcommand{\Ass}{\operatorname{Ass}}
 \newcommand{\Ann}{\operatorname{Ann}}
+\newcommand{\Ext}{\operatorname{Ext}}
+\newcommand{\Hom}{\operatorname{Hom}}
+\newcommand{\Mult}{\operatorname{Mult}}
 
 
 \newcommand{\mat}[4]{\left[ \begin{array}{cc}#1 &#2 \\ #3 &#4\end{array}\right]}
