--- a/notebook_ag.tex
+++ b/notebook_ag.tex
@@ -16,7 +16,17 @@
 
 \begin{document}
 
+    \pagestyle{empty}
     \maketitle
+
+    \frontmatter
+    \pagestyle{mainmatterstyle}
+
+    \tableofcontents
+
+    \mainmatter
+
+    \chapter{This first properties}
 
     \input{chapters/preliminary/setup_and_the_first_examples/text.tex} 
 
