--- a/notebook_ag.tex
+++ b/notebook_ag.tex
@@ -25,12 +25,18 @@
     \tableofcontents
 
     \mainmatter
+ 
+    \chapter{The first properties}
+        \input{chapters/preliminary/setup_and_the_first_examples/text.tex} 
+        \input{chapters/preliminary/normality_and_Cohen_Macaulay/text.tex}
 
-    \chapter{This first properties}
+    \appendix
 
-    \input{chapters/preliminary/setup_and_the_first_examples/text.tex} 
+    \chapter{Commutative Algebra}
+        \input{chapters/commutative_algebra/elementary_results/text.tex}
+        \input{chapters/commutative_algebra/associated_primes/text.tex}
+        \input{chapters/commutative_algebra/dimension/text.tex}
 
-    \input{chapters/preliminary/normality_and_Cohen_Macaulay/text.tex}
-
-    % \printbibliography
+    \printbibliography
+    
 \end{document}
