alter label of enumerate environment

--- a/template/noteformyself.cls
+++ b/template/noteformyself.cls
@@ -238,6 +238,12 @@
 }
 
 %--------------------------------------------------------------------------
+% 列表环境配置
+%--------------------------------------------------------------------------
+\setlist[enumerate,1]{label=(\alph*)} % 第一层级：小写字母加括号 (a), (b), ...)
+\setlist[enumerate,2]{label=(\roman*)} % 第二层级：小写罗马数字加括号 (i), (ii), ...)
+
+%--------------------------------------------------------------------------
 % 定理环境可视化配置
 %--------------------------------------------------------------------------
 % 定义定理样式模板
