almost finish the module of differentials

--- a/template/notation.tex
+++ b/template/notation.tex
@@ -18,8 +18,10 @@
 
 
 \newcommand{\fraka}{{\mathfrak{a}}}
+\newcommand{\frakb}{{\mathfrak{b}}}
 \newcommand{\frakM}{{\mathfrak{M}}}
 \newcommand{\frakm}{{\mathfrak{m}}}
+\newcommand{\frakn}{{\mathfrak{n}}}
 \newcommand{\frakN}{{\mathfrak{N}}}
 \newcommand{\frakP}{{\mathfrak{P}}}
 \newcommand{\frakp}{{\mathfrak{p}}}
@@ -65,6 +67,9 @@
 \newcommand{\Ext}{\operatorname{Ext}}
 \newcommand{\Hom}{\operatorname{Hom}}
 \newcommand{\Mult}{\operatorname{Mult}}
+\renewcommand{\Im}{\operatorname{Im}}
+\newcommand{\Ker}{\operatorname{Ker}}
+\newcommand{\rank}{\operatorname{rank}}
 
 
 \newcommand{\mat}[4]{\left[ \begin{array}{cc}#1 &#2 \\ #3 &#4\end{array}\right]}
