add info page, modify the title of section

--- a/notebook_ag.tex
+++ b/notebook_ag.tex
@@ -5,7 +5,11 @@
 \title{Notebook in Algebraic Geometry}
 \author{Tianle Yang}
 \date{\today}
-\authorinfo{\href{mailto:loveandjustice@88.com}{loveandjustice@88.com}}
+\authoremail{\href{mailto:loveandjustice@88.com}{loveandjustice@88.com}}
+\authorpage{\href{https://www.tianleyang.com}{tianleyang.com}}
+\texsource{\href{https://github.com/MonkeyUnderMountain/Note_on_Algebraic_Geometry}{github.com/MonkeyUnderMountain/Note\_on\_Algebraic\_Geometry}}
+\version{0.1.0}
+
 \setCJKfamilyfont{lxgwwenkai}{LXGW WenKai} % 定义霞鹜文楷，若未安装，请去掉相关代码编译或使用其他字体
 \coversentence{\CJKfamily{lxgwwenkai}阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴！}
 \coverimage{template/placeholder.jpg} % 封面图片
@@ -20,12 +24,13 @@
     \maketitle
 
     \frontmatter
+
     \pagestyle{mainmatterstyle}
 
     \tableofcontents
 
     \mainmatter
- 
+
     \chapter{The first properties}
         \input{chapters/preliminary/setup_and_the_first_examples/text.tex} 
         \input{chapters/preliminary/normality_and_Cohen_Macaulay/text.tex}
@@ -36,6 +41,8 @@
         \input{chapters/commutative_algebra/elementary_results/text.tex}
         \input{chapters/commutative_algebra/associated_primes/text.tex}
         \input{chapters/commutative_algebra/dimension/text.tex}
+        \input{chapters/commutative_algebra/integrally_closed_and_normal/text.tex}
+        \input{chapters/commutative_algebra/regularity_and_smoothness/text.tex}
 
     \printbibliography
     
