modify the most part into ca

--- a/notebook_ag.tex
+++ b/notebook_ag.tex
@@ -33,7 +33,7 @@
 
     \chapter{The first properties}
         \input{chapters/preliminary/setup_and_the_first_examples/text.tex} 
-        \input{chapters/preliminary/normality_and_Cohen_Macaulay/text.tex}
+        % \input{chapters/preliminary/normality_and_Cohen_Macaulay/text.tex}
 
     \appendix
 
@@ -43,6 +43,12 @@
         \input{chapters/commutative_algebra/dimension/text.tex}
         \input{chapters/commutative_algebra/integrally_closed_and_normal/text.tex}
         \input{chapters/commutative_algebra/regularity_and_smoothness/text.tex}
+
+    \chapter{Homological Algebra}
+        \input{chapters/Homological_algebra/Complexes_and_Homology/text.tex}
+        \input{chapters/Homological_algebra/Derived_Functors/text.tex}
+        \input{chapters/Homological_algebra/Applications_to_Commutative_Algebra/text.tex}
+
 
     \printbibliography
     
