--- a/notebook_ag.tex
+++ b/notebook_ag.tex
@@ -2,7 +2,7 @@
 \usepackage{lipsum} % 生成测试文本
 
 
-\title{Notebook in Algebraic Geometry}
+\title{Notes in Algebraic Geometry}
 \author{Tianle Yang}
 \date{\today}
 \authoremail{\href{mailto:loveandjustice@88.com}{loveandjustice@88.com}}
@@ -11,7 +11,7 @@
 \version{0.1.0}
 
 \setCJKfamilyfont{lxgwwenkai}{LXGW WenKai} % 定义霞鹜文楷，若未安装，请去掉相关代码编译或使用其他字体
-\coversentence{\CJKfamily{lxgwwenkai}阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴阿巴！}
+\coversentence{\CJKfamily{lxgwwenkai}阿巴阿巴阿巴阿巴阿巴阿巴！}
 \coverimage{template/placeholder.jpg} % 封面图片
 % \coverlinecolor{red}
 \covertitlefont{Allura} % 封面标题字体, 若未安装，可注释掉此行编译或使用其他字体
@@ -31,7 +31,7 @@
 
     \mainmatter
 
-    \chapter{The first properties}
+    \chapter{The First Properties}
         \input{chapters/preliminary/setup_and_the_first_examples/text.tex} 
         % \input{chapters/preliminary/normality_and_Cohen_Macaulay/text.tex}
 
