finish proof of (localization of regular ring is still regular)

--- a/template/notation.tex
+++ b/template/notation.tex
@@ -11,6 +11,7 @@
 \newcommand{\bbz}{{\mathbb{Z}}}
 
 
+\newcommand{\cala}{{\mathcal{A}}}
 \newcommand{\calf}{{\mathcal{F}}}
 \newcommand{\cali}{{\mathcal{I}}}
 \newcommand{\caln}{{\mathcal{N}}}
@@ -65,11 +66,15 @@
 \newcommand{\Ass}{\operatorname{Ass}}
 \newcommand{\Ann}{\operatorname{Ann}}
 \newcommand{\Ext}{\operatorname{Ext}}
+\newcommand{\Tor}{\operatorname{Tor}}
 \newcommand{\Hom}{\operatorname{Hom}}
 \newcommand{\Mult}{\operatorname{Mult}}
 \renewcommand{\Im}{\operatorname{Im}}
 \newcommand{\Ker}{\operatorname{Ker}}
 \newcommand{\rank}{\operatorname{rank}}
+\newcommand{\cohdim}{\operatorname{coh.dim}}
+\newcommand{\projdim}{\operatorname{proj.dim}}
+\newcommand{\injdim}{\operatorname{inj.dim}}
 
 
 \newcommand{\mat}[4]{\left[ \begin{array}{cc}#1 &#2 \\ #3 &#4\end{array}\right]}
