framework for regular local ring is UFD

--- a/template/notation.tex
+++ b/template/notation.tex
@@ -73,6 +73,7 @@
 \newcommand{\Ker}{\operatorname{Ker}}
 \newcommand{\rank}{\operatorname{rank}}
 \newcommand{\cohdim}{\operatorname{coh.dim}}
+\newcommand{\hldim}{\operatorname{hl.dim}}
 \newcommand{\projdim}{\operatorname{proj.dim}}
 \newcommand{\injdim}{\operatorname{inj.dim}}
 
