--- a/template/notation.tex
+++ b/template/notation.tex
@@ -44,6 +44,7 @@
 
 
 \newcommand{\Var}{\mathbf{Var}}
+\newcommand{\TopMod}{\mathbf{TopMod}}
 
 
 \newcommand{\ten}{\otimes}
@@ -76,6 +77,8 @@
 \newcommand{\hldim}{\operatorname{hl.dim}}
 \newcommand{\projdim}{\operatorname{proj.dim}}
 \newcommand{\injdim}{\operatorname{inj.dim}}
+\newcommand{\rad}{\operatorname{rad}}
+\newcommand{\nil}{\operatorname{nil}}
 
 
 \newcommand{\mat}[4]{\left[ \begin{array}{cc}#1 &#2 \\ #3 &#4\end{array}\right]}
