change the size of font and line stretch

--- a/notebook_ag.tex
+++ b/notebook_ag.tex
@@ -43,6 +43,7 @@
         \input{chapters/commutative_algebra/dimension/text.tex}
         \input{chapters/commutative_algebra/integrally_closed_and_normal/text.tex}
         \input{chapters/commutative_algebra/regularity_and_smoothness/text.tex}
+        \input{chapters/commutative_algebra/completion/text.tex}
 
     \chapter{Homological Algebra}
         \input{chapters/Homological_algebra/Complexes_and_Homology/text.tex}
