--- a/template/notation.tex
+++ b/template/notation.tex
@@ -79,6 +79,7 @@
 \newcommand{\injdim}{\operatorname{inj.dim}}
 \newcommand{\rad}{\operatorname{rad}}
 \newcommand{\nil}{\operatorname{nil}}
+\newcommand{\characteristic}{\operatorname{char}}
 
 
 \newcommand{\mat}[4]{\left[ \begin{array}{cc}#1 &#2 \\ #3 &#4\end{array}\right]}
