the first version of Kodaira vanishing (with many bug), and a frame for abelian varieties (1,2) section

--- a/template/notation.tex
+++ b/template/notation.tex
@@ -12,22 +12,52 @@
 
 
 \newcommand{\cala}{{\mathcal{A}}}
+\newcommand{\calb}{{\mathcal{B}}}
+\newcommand{\calc}{{\mathcal{C}}}
+\newcommand{\cald}{{\mathcal{D}}}
+\newcommand{\cale}{{\mathcal{E}}}
 \newcommand{\calf}{{\mathcal{F}}}
+\newcommand{\calg}{{\mathcal{G}}}
+\newcommand{\calh}{{\mathcal{H}}}
 \newcommand{\cali}{{\mathcal{I}}}
+\newcommand{\calj}{{\mathcal{J}}}
+\newcommand{\calk}{{\mathcal{K}}}
+\newcommand{\call}{{\mathcal{L}}}
+\newcommand{\calm}{{\mathcal{M}}}
 \newcommand{\caln}{{\mathcal{N}}}
 \newcommand{\calo}{{\mathcal{O}}}
+\newcommand{\calp}{{\mathcal{P}}}
+\newcommand{\calq}{{\mathcal{Q}}}
+\newcommand{\calr}{{\mathcal{R}}}
+\newcommand{\cals}{{\mathcal{S}}}
+\newcommand{\calt}{{\mathcal{T}}}
+\newcommand{\calu}{{\mathcal{U}}}
+\newcommand{\calv}{{\mathcal{V}}}
+\newcommand{\calw}{{\mathcal{W}}}
+\newcommand{\calx}{{\mathcal{X}}}
+\newcommand{\caly}{{\mathcal{Y}}}
+\newcommand{\calz}{{\mathcal{Z}}}
 
 
 \newcommand{\fraka}{{\mathfrak{a}}}
 \newcommand{\frakb}{{\mathfrak{b}}}
+\newcommand{\frakc}{{\mathfrak{c}}}
+\newcommand{\frakd}{{\mathfrak{d}}}
+\newcommand{\frake}{{\mathfrak{e}}}
+\newcommand{\frakf}{{\mathfrak{f}}}
+\newcommand{\frakg}{{\mathfrak{g}}}
+\newcommand{\frakh}{{\mathfrak{h}}}
 \newcommand{\frakM}{{\mathfrak{M}}}
 \newcommand{\frakm}{{\mathfrak{m}}}
-\newcommand{\frakn}{{\mathfrak{n}}}
 \newcommand{\frakN}{{\mathfrak{N}}}
+\newcommand{\frakn}{{\mathfrak{n}}}
 \newcommand{\frakP}{{\mathfrak{P}}}
 \newcommand{\frakp}{{\mathfrak{p}}}
 \newcommand{\frakQ}{{\mathfrak{Q}}}
 \newcommand{\frakq}{{\mathfrak{q}}}
+
+
+\newcommand{\rmN}{{\mathrm{N}}}
 
 
 \newcommand{\kk}{{\mathsf{k}}}
@@ -44,6 +74,10 @@
 
 
 \newcommand{\Var}{\mathbf{Var}}
+\newcommand{\Sch}{\mathbf{Sch}}
+\newcommand{\Alg}{\mathbf{Alg}}
+\newcommand{\Ring}{\mathbf{Ring}}
+\newcommand{\Mod}{\mathbf{Mod}}
 \newcommand{\TopMod}{\mathbf{TopMod}}
 
 
@@ -69,6 +103,7 @@
 \newcommand{\Ext}{\operatorname{Ext}}
 \newcommand{\Tor}{\operatorname{Tor}}
 \newcommand{\Hom}{\operatorname{Hom}}
+\newcommand{\End}{\operatorname{End}}
 \newcommand{\Mult}{\operatorname{Mult}}
 \renewcommand{\Im}{\operatorname{Im}}
 \newcommand{\Ker}{\operatorname{Ker}}
@@ -80,9 +115,26 @@
 \newcommand{\rad}{\operatorname{rad}}
 \newcommand{\nil}{\operatorname{nil}}
 \newcommand{\characteristic}{\operatorname{char}}
+\newcommand{\Pic}{\operatorname{Pic}}
+\newcommand{\NS}{\operatorname{NS}}
+\newcommand{\Exc}{\operatorname{Exc}}
+\newcommand{\Sing}{\operatorname{Sing}}
+\newcommand{\Reg}{\operatorname{Reg}}
+\newcommand{\Tr}{\operatorname{Tr}}
 
 
 \newcommand{\mat}[4]{\left[ \begin{array}{cc}#1 &#2 \\ #3 &#4\end{array}\right]}
+\newcommand{\threemat}[9]{\left[ \begin{array}{ccc}
+  #1 & #2 & #3 \\
+  #4 & #5 & #6 \\
+  #7 & #8 & #9
+\end{array}\right]}
+\newcommand{\genmat}[9]{\left( \begin{array}{cccc}
+  #1 & #2 & \cdots & #3 \\
+  #4 & #5 & \cdots & #6 \\  
+  \ldots & \ldots & \ddots & \ldots \\
+  #7 & #8 & \cdots & #9
+\end{array}\right)}
 
 
 
