--- a/template/ref.bib
+++ b/template/ref.bib
@@ -100,15 +100,7 @@
   publisher={Springer}
 }
 
-@book{matsumura1970commutative,
-  title={Commutative algebra},
-  author={Matsumura, Hideyuki},
-  volume={120},
-  year={1970},
-  publisher={WA Benjamin New York}
-}
-
-@book{hartshorne2013algebraic,
+@book{Har77,
   title={Algebraic geometry},
   author={Hartshorne, Robin},
   volume={52},
@@ -174,6 +166,15 @@
   volume={83},
   year={2012},
   publisher={Springer Science \& Business Media}
+}
+
+@article{KM98,
+  title={Birational geometry of algebraic varieties},
+  author={Koll{\'a}r, J{\'a}nos and Mori, Shigefumi},
+  journal={(No Title)},
+  volume={134},
+  year={1998},
+  publisher={Cambridge university press}
 }
 
 @book{Mat70,
