before the environment step

--- a/template/notation.tex
+++ b/template/notation.tex
@@ -121,6 +121,10 @@
 \newcommand{\Sing}{\operatorname{Sing}}
 \newcommand{\Reg}{\operatorname{Reg}}
 \newcommand{\Tr}{\operatorname{Tr}}
+\newcommand{\Psef}{\operatorname{Psef}}
+\newcommand{\Nef}{\operatorname{Nef}}
+\newcommand{\Amp}{\operatorname{Amp}}
+\newcommand{\Bigcone}{\operatorname{Big}}
 
 
 \newcommand{\mat}[4]{\left[ \begin{array}{cc}#1 &#2 \\ #3 &#4\end{array}\right]}
